# Bosch-BSEC2-Library

./: CMakeLists.txt
src/: bsec2.cpp  bsec2.h
